# aic

./: .gitignore  README.md  aic.repos  environment.yml  ieec.repos  participant.repos  pixi.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  build_aic_eval_image.yml  build_sphinx_docs.yml  pixi.yml  style.yml
aic_adapter/src/: aic_adapter.cpp
aic_assets/hooks/: aic_assets.dsv.in
aic_assets/models/ATI_Axia80_M20/: axia80_m20_macro.xacro
aic_assets/models/Axia80 M20/: axia80_m20_macro.xacro
aic_assets/models/Basler Camera/: basler_camera_macro.xacro
aic_assets/models/NIC Card/: model.sdf
aic_assets/models/NIC Card Mount/: model.sdf  nic_card_mount_macro.xacro
aic_assets/models/Robotiq Hand-E/: robotiq_hande.ros2_control.xacro  robotiq_hande_macro.xacro
aic_assets/models/SC Plug/: model.sdf
aic_assets/models/SC Port/: model.sdf  sc_port_macro.xacro  sc_port_mount_visual.glb
aic_assets/models/Task Board/: model.config  model.sdf
aic_assets/models/Tri Cam Mount/: tri_cam_mount_macro.xacro
aic_assets/models/cable_base_a/: model.config  model.sdf
aic_assets/models/cable_base_b/: model.config  model.sdf
aic_assets/models/cable_base_c/: model.config  model.sdf
aic_assets/models/cable_base_c_rotated/: model.sdf
aic_assets/models/lc_sc_cable/: model.sdf
aic_assets/models/lc_sfp_sc_cable/: model.config  model.sdf
aic_assets/models/sfp_sc_cable/: .model.sdf.swp  model.config  model.sdf
aic_assets/models/sfp_sc_cable_reversed/: model.sdf
aic_assets/scripts/: cable.sdf.erb
aic_bringup/: CMakeLists.txt  README.md  package.xml
aic_bringup/config/: aic_ros2_controllers.yaml  ros_gz_bridge_config.yaml
aic_bringup/launch/: aic_controller_bringup.launch.py  aic_gz_bringup.launch.py  spawn_cable.launch.py  spawn_task_board.launch.py
aic_bringup/scripts/: home_robot.py  home_robot_aic_controller.py  keyboard_teleop.py  teleop_keyboard.py  test_impedance.py
aic_controller/: CMakeLists.txt  package.xml
aic_controller/include/aic_controller/: aic_controller.hpp  cart_state.hpp  cartesian_impedance_controller.hpp  cartesian_limits.hpp  cartesian_state.hpp  joint_state.hpp  utils.hpp
aic_controller/src/: aic_controller.cpp  aic_controller_parameters.yaml  cartesian_impedance_controller.cpp  cartesian_limits.cpp  cartesian_state.cpp  utils.cpp
aic_controllers/aic_controller/: CMakeLists.txt  aic_controller.xml  aic_controller_plugin.xml  package.xml
aic_description/config/: gazebo_ros2_control.xacro
aic_description/urdf/: cable.sdf.xacro  task_board.urdf.xacro  ur_gz.urdf.xacro
aic_description/world/: aic.sdf
aic_engine/: CMakeLists.txt  README.md  package.xml
aic_engine/config/: sample_config.yaml  sample_config_var.yaml
aic_engine/src/: aic_engine.cpp  aic_engine.hpp  main.cpp
aic_example_policies/: README.md  setup.py
aic_gazebo/: CMakeLists.txt  package.xml
aic_gazebo/include/aic_gazebo/: ScoringPlugin.hh  ScoringTier1.hh
aic_gazebo/proto/: scoring.proto
aic_gazebo/src/: CablePlugin.cc  CablePlugin.hh  OffLimitContactsPlugin.cc  OffLimitContactsPlugin.hh  ResetJointsPlugin.cc  ResetJointsPlugin.hh  ScoringPlugin.cc  ScoringTier1.cc  WorldSdfGeneratorPlugin.cc
aic_interfaces/: README.md
aic_interfaces/aic_control_interfaces/: CMakeLists.txt  package.xml  pixi.toml
aic_lerobot_tools/: README.md  package.xml  setup.py
aic_lerobot_tools/bag_to_lerobot/: __main__.py  decoders.py
aic_lerobot_tools/contracts/: aic_phase0.yaml
aic_model/: package.xml  pixi.toml  setup.py
aic_model/aic_model/: aic_model.py  aic_model_node.py  aic_model_policy.py  model_node.py  policy.py  policy_ros.py
aic_model/test/: create_and_cancel_task.py  cycle_through_lifecycle.py
aic_scoring/: CMakeLists.txt  package.xml
aic_scoring/config/: tier2.yaml
aic_scoring/src/: ScoringTier1.cc  ScoringTier1_main.cc  ScoringTier2.cc  ScoringTier2_main.cc
aic_utils/aic_isaac/: README.md
aic_utils/aic_isaaclab/: README.md
aic_utils/aic_mujoco/: CMakeLists.txt  README.md  mujoco.repos  package.xml
aic_utils/aic_mujoco/examples/: README.md
aic_utils/aic_teleoperation/: README.md  package.xml  setup.py
aic_utils/aic_teleoperation/aic_teleoperation/: cartesian_keyboard_teleop.py  joint_keyboard_teleop.py
aic_utils/aic_teleoperation/scripts/: cartesian_keyboard_teleop.py  joint_keyboard_teleop.py
aic_utils/lerobot_robot_aic/: README.md  pixi.toml
aic_utils/spacemouse_teleop/: package.xml  setup.py
aic_venv/: README.md  aic_venv_python3  package.xml  setup.py  setup_venv.py
docker/: docker-compose.yaml
docker/acl/: credentials.txt  zenoh_config_eval.sh  zenoh_config_participant.sh  zenoh_config_router.sh  zenoh_eval_config.json5  zenoh_router_config.json5
docker/aic_docs/: Dockerfile  README.md  fetch_docs_assets.sh  requirements.txt  update_image_paths.sh
docker/aic_eval/: Dockerfile  README.md  zenoh_router_config.json5
docker/aic_model/: Dockerfile
docs/: aic_controller.md  aic_interfaces.md  build_eval.md  build_evaluator.md  challenge_rules.md  conf.py  developer_workflow.md  explore_environment.md  getting_started.md  glossary.md  index.rst  overview.md  participant_utilities.md  phases.md  policy.md  policy_tutorial.md  qualification_phase.md  scene_description.md  scoring.md  scoring_tests.md  submission.md  task_board_description.md  troubleshooting.md  zenoh_acl.md
ieec_bringup/: package.xml
ieec_bringup/config/: ieec_ros2_controllers.yaml
ieec_bringup/launch/: ieec_gz_bringup.launch.py
ieec_description/urdf/: ur_gz.urdf.xacro
lerobot_robot_aic/: main.py  package.xml  pixi.toml  setup.py
lerobot_robot_aic/lerobot_robot_aic/: __init__.py  aic_robot_aic_controller.py  aic_robot_ros2_control.py
lerobot_robot_aic_ros/: README.md  package.xml
lerobot_robot_aic_ros/lerobot_robot_aic_ros/: aic_interface.py  aic_robot.py  aic_robot_aic_controller.py  aic_robot_ros2_control.py  aic_teleop.py
participant_pkgs/: README.md
participant_pkgs/aic_lerobot_tools/: README.md  package.xml  setup.py
participant_pkgs/lerobot_robot_aic_ros/: README.md
sphinx_docs/: conf.py  index.rst
(+91 files in other folders)
