<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_venv</name>
  <version>0.0.1</version>
  <description>This package contains tools to work with leRobot for the challenge</description>
  <maintainer email="koonpeng@intrinsic.ai">Teo Koon Peng</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>python3-venv</exec_depend>

  <build_depend>do_not_publish</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>