<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_teleoperation</name>
  <version>0.0.0</version>
  <description>Scripts to teleoperate a robot controlled by aic_controller</description>
  <maintainer email="johntgz@todo.todo">johntgz</maintainer>
  <license>Apache-2.0</license>

	<depend>aic_control_interfaces</depend>
	<depend>geometry_msgs</depend>
	<depend>python3-pynput</depend>
	<depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
