<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_teleoperation</name>
  <version>0.0.0</version>
  <description>Scripts to teleoperate a robot controlled by aic_controller</description>
  <maintainer email="johntgz@todo.todo">johntgz</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>aic_control_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend condition="$ROS_DISTRO != 'kilted'">python3-pynput</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
